--- a/style.css
+++ b/style.css
@@ -82,153 +82,146 @@
          url('../fonts/poppins-v20-latin-700.svg#Poppins') format('svg'); /* Legacy iOS */
   }
 
-*{
+* {
+    box-sizing: border-box;  
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
-    font-family:'Poppins', sans-serif;
-}
+    font-family: 'Poppins', sans-serif;
+  }
 
-ul{
-    list-style: none;
-}
+  .showcase {
+      position: absolute;
+      right: 0;
+      width: 100%;
+      min-height: 100vh;
+      padding: 100px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      background: #111;
+      color: #fff;
+      z-index: 2;
+      transition: 0.5s;
+  }
 
-a{
-    text-decoration: none;
-    color: inherit;
-}
+  .showcase.active {
+    right: 300px;
+  }
 
-section{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 110px 100px;
-}
+  .showcase header {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      padding: 40px 100px;
+      z-index: 1000;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+  }
 
-@media (max-width: 1000px){
-    section{
-        padding: 100px 50px;
-    }
-}
+  .logo {
+      cursor: pointer;
+  }
 
-@media (max-width: 600px){
-    section{
-        padding: 125px 30px;
-    }
-}
-
-header{
+  .showcase video {
     position: absolute;
     top: 0;
     left: 0;
-    z-index: 10;
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    color: #ffebcd;
-    padding: 35px 100px 0;
-}
-
-header a{
-    font-weight: 900;
-}
-
-header h2{
-    font-weight: 500;
-}
-
-header .nav{
-    display: flex;
-}
-
-header .nav li{
-    margin: 0 15px;
-}
-
-header .nav li:first-child{
-    margin-left: 0;
-}
-
-header .nav li:last-child{
-    margin-right: 0;
-}
-
-@media (max-width: 1000px){
-    header{
-        padding: 20px 50px;
-    }
-}
-
-@media (max-width: 700px){
-    header{
-        flex-direction: column;
-    }
-    header h2{
-        margin-bottom: 15px;
-    }
-    header .nav li{
-        margin: 0 7px;
-    }
-}
-
-.box{
-    position: relative;
-    justify-content: center;
-    min-height: 100vh;
-    color: #fff;
-    text-align: center;
-}
-
-.box video{
-    position: absolute;
-    left: 0;
-    top: 0;
     width: 100%;
     height: 100%;
     object-fit: cover;
-    z-index: -1;
-}
+    opacity: 0.8;
+  }
 
-.box h1{
-    margin-bottom: 15px;
-    font-size: 65px;
-    text-transform: uppercase;
-}
+  .text {
+    position: relative;
+    z-index: 10;
+  }
 
-.box h3{
-    margin-bottom: 40px;
-    font-size: 25px;
-}
+  .text h2 {
+    font-size: 4em;
+    font-weight: 700;
+    line-height: 1em;
+  }
 
-.box a.boxBtn{
-    padding: 15px 35px;
-    background: transparent;
-    border-radius: 50px;
-    color: #fff;
-    text-transform: uppercase;
-    border: 4px solid #fff;
-    transition: all .5s;
-}
+  .text h3 {
+    font-size: 2em;
+    font-weight: 500;
+    line-height: 1em;
+  }
 
-.box a.boxBtn:hover{
+  .text p {
+    font-size: 1em;
+    margin: 20px 0;
+    font-weight: 400;
+    max-width: 700px;
+
+  }
+
+  .text a {
+    display: inline-block;
+    font-size: 1.1em;
     background: #fff;
-    color: #000;
-}
+    padding: 15px 30px;
+    color: #c0c0c0;
+    text-decoration: none;
+    margin-top: 10px;
+    border-radius: 6px;
+    transition: 0.1s;
+  }
 
-@media (max-width: 800px){
-    .box{
-        min-height: 600px;
+  .text a:hover {
+    color: #fff;
+    background: #a9a9a9;
+  }
+
+  .social {
+    position: absolute;
+    bottom: 60px;
+    z-index: 10;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+     /* All code and contents copyright 2021-2023 Shadow Foundry, Inc. All rights reserved. */
+    /* github: shadow-foundry */
+
+  .social li {
+    list-style: none;
+  }
+
+  .social li a {
+    display: inline-block;
+    margin-right: 30px;
+    transition: 0.5s;
+  }
+
+  .social li a:hover {
+    transform: scale(1.2);
+  }
+
+  .legal {
+    position: absolute;
+    bottom: 3px;
+    z-index: 10;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .legal li {
+    list-style: none;
+    margin-right: 20px;
+  }
+
+  @media(max-width: 798px) {
+    .showcase, .showcase header {
+      padding: 40px;
     }
-    .box h1{
-        font-size: 32px;
+
+    .text h2 {
+      font-size: 3em;
     }
-    .box h3{
-        font-size: 20px;
-    }
-    .box a.boxBtn{
-        padding: 15px 40px;
-    }
-}
-/* All code copyright Shadow Foundry, Inc. All rights reserved. */
-/* https://shadowfoundry.ai */
+  }
