--- a/style.css
+++ b/style.css
@@ -1,92 +1,190 @@
-/* poppins-200 - latin */
+/* montserrat-200 - latin-ext_latin */
 @font-face {
-    font-family: 'Poppins';
+    font-family: 'Montserrat';
     font-style: normal;
     font-weight: 200;
-    src: url('../fonts/poppins-v20-latin-200.eot'); /* IE9 Compat Modes */
+    src: url('../fonts/montserrat-v25-latin-ext_latin-200.eot'); /* IE9 Compat Modes */
     src: local(''),
-         url('../fonts/poppins-v20-latin-200.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-         url('../fonts/poppins-v20-latin-200.woff2') format('woff2'), /* Super Modern Browsers */
-         url('../fonts/poppins-v20-latin-200.woff') format('woff'), /* Modern Browsers */
-         url('../fonts/poppins-v20-latin-200.ttf') format('truetype'), /* Safari, Android, iOS */
-         url('../fonts/poppins-v20-latin-200.svg#Poppins') format('svg'); /* Legacy iOS */
+         url('../fonts/montserrat-v25-latin-ext_latin-200.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+         url('../fonts/montserrat-v25-latin-ext_latin-200.woff2') format('woff2'), /* Super Modern Browsers */
+         url('../fonts/montserrat-v25-latin-ext_latin-200.woff') format('woff'), /* Modern Browsers */
+         url('../fonts/montserrat-v25-latin-ext_latin-200.ttf') format('truetype'), /* Safari, Android, iOS */
+         url('../fonts/montserrat-v25-latin-ext_latin-200.svg#Montserrat') format('svg'); /* Legacy iOS */
   }
   
-  /* poppins-300 - latin */
+  /* montserrat-300 - latin-ext_latin */
   @font-face {
-    font-family: 'Poppins';
+    font-family: 'Montserrat';
     font-style: normal;
     font-weight: 300;
-    src: url('../fonts/poppins-v20-latin-300.eot'); /* IE9 Compat Modes */
+    src: url('../fonts/montserrat-v25-latin-ext_latin-300.eot'); /* IE9 Compat Modes */
     src: local(''),
-         url('../fonts/poppins-v20-latin-300.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-         url('../fonts/poppins-v20-latin-300.woff2') format('woff2'), /* Super Modern Browsers */
-         url('../fonts/poppins-v20-latin-300.woff') format('woff'), /* Modern Browsers */
-         url('../fonts/poppins-v20-latin-300.ttf') format('truetype'), /* Safari, Android, iOS */
-         url('../fonts/poppins-v20-latin-300.svg#Poppins') format('svg'); /* Legacy iOS */
+         url('../fonts/montserrat-v25-latin-ext_latin-300.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+         url('../fonts/montserrat-v25-latin-ext_latin-300.woff2') format('woff2'), /* Super Modern Browsers */
+         url('../fonts/montserrat-v25-latin-ext_latin-300.woff') format('woff'), /* Modern Browsers */
+         url('../fonts/montserrat-v25-latin-ext_latin-300.ttf') format('truetype'), /* Safari, Android, iOS */
+         url('../fonts/montserrat-v25-latin-ext_latin-300.svg#Montserrat') format('svg'); /* Legacy iOS */
   }
   
-  /* poppins-regular - latin */
+  /* montserrat-regular - latin-ext_latin */
   @font-face {
-    font-family: 'Poppins';
+    font-family: 'Montserrat';
     font-style: normal;
     font-weight: 400;
-    src: url('../fonts/poppins-v20-latin-regular.eot'); /* IE9 Compat Modes */
+    src: url('../fonts/montserrat-v25-latin-ext_latin-regular.eot'); /* IE9 Compat Modes */
     src: local(''),
-         url('../fonts/poppins-v20-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-         url('../fonts/poppins-v20-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
-         url('../fonts/poppins-v20-latin-regular.woff') format('woff'), /* Modern Browsers */
-         url('../fonts/poppins-v20-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
-         url('../fonts/poppins-v20-latin-regular.svg#Poppins') format('svg'); /* Legacy iOS */
+         url('../fonts/montserrat-v25-latin-ext_latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+         url('../fonts/montserrat-v25-latin-ext_latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
+         url('../fonts/montserrat-v25-latin-ext_latin-regular.woff') format('woff'), /* Modern Browsers */
+         url('../fonts/montserrat-v25-latin-ext_latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
+         url('../fonts/montserrat-v25-latin-ext_latin-regular.svg#Montserrat') format('svg'); /* Legacy iOS */
   }
   
-  /* poppins-500 - latin */
+  /* montserrat-500 - latin-ext_latin */
   @font-face {
-    font-family: 'Poppins';
+    font-family: 'Montserrat';
     font-style: normal;
     font-weight: 500;
-    src: url('../fonts/poppins-v20-latin-500.eot'); /* IE9 Compat Modes */
+    src: url('../fonts/montserrat-v25-latin-ext_latin-500.eot'); /* IE9 Compat Modes */
     src: local(''),
-         url('../fonts/poppins-v20-latin-500.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-         url('../fonts/poppins-v20-latin-500.woff2') format('woff2'), /* Super Modern Browsers */
-         url('../fonts/poppins-v20-latin-500.woff') format('woff'), /* Modern Browsers */
-         url('../fonts/poppins-v20-latin-500.ttf') format('truetype'), /* Safari, Android, iOS */
-         url('../fonts/poppins-v20-latin-500.svg#Poppins') format('svg'); /* Legacy iOS */
+         url('../fonts/montserrat-v25-latin-ext_latin-500.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+         url('../fonts/montserrat-v25-latin-ext_latin-500.woff2') format('woff2'), /* Super Modern Browsers */
+         url('../fonts/montserrat-v25-latin-ext_latin-500.woff') format('woff'), /* Modern Browsers */
+         url('../fonts/montserrat-v25-latin-ext_latin-500.ttf') format('truetype'), /* Safari, Android, iOS */
+         url('../fonts/montserrat-v25-latin-ext_latin-500.svg#Montserrat') format('svg'); /* Legacy iOS */
   }
   
-  /* poppins-600 - latin */
+  /* montserrat-600 - latin-ext_latin */
   @font-face {
-    font-family: 'Poppins';
+    font-family: 'Montserrat';
     font-style: normal;
     font-weight: 600;
-    src: url('../fonts/poppins-v20-latin-600.eot'); /* IE9 Compat Modes */
+    src: url('../fonts/montserrat-v25-latin-ext_latin-600.eot'); /* IE9 Compat Modes */
     src: local(''),
-         url('../fonts/poppins-v20-latin-600.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-         url('../fonts/poppins-v20-latin-600.woff2') format('woff2'), /* Super Modern Browsers */
-         url('../fonts/poppins-v20-latin-600.woff') format('woff'), /* Modern Browsers */
-         url('../fonts/poppins-v20-latin-600.ttf') format('truetype'), /* Safari, Android, iOS */
-         url('../fonts/poppins-v20-latin-600.svg#Poppins') format('svg'); /* Legacy iOS */
+         url('../fonts/montserrat-v25-latin-ext_latin-600.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+         url('../fonts/montserrat-v25-latin-ext_latin-600.woff2') format('woff2'), /* Super Modern Browsers */
+         url('../fonts/montserrat-v25-latin-ext_latin-600.woff') format('woff'), /* Modern Browsers */
+         url('../fonts/montserrat-v25-latin-ext_latin-600.ttf') format('truetype'), /* Safari, Android, iOS */
+         url('../fonts/montserrat-v25-latin-ext_latin-600.svg#Montserrat') format('svg'); /* Legacy iOS */
   }
   
-  /* poppins-700 - latin */
+  /* montserrat-700 - latin-ext_latin */
   @font-face {
-    font-family: 'Poppins';
+    font-family: 'Montserrat';
     font-style: normal;
     font-weight: 700;
-    src: url('../fonts/poppins-v20-latin-700.eot'); /* IE9 Compat Modes */
+    src: url('../fonts/montserrat-v25-latin-ext_latin-700.eot'); /* IE9 Compat Modes */
     src: local(''),
-         url('../fonts/poppins-v20-latin-700.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-         url('../fonts/poppins-v20-latin-700.woff2') format('woff2'), /* Super Modern Browsers */
-         url('../fonts/poppins-v20-latin-700.woff') format('woff'), /* Modern Browsers */
-         url('../fonts/poppins-v20-latin-700.ttf') format('truetype'), /* Safari, Android, iOS */
-         url('../fonts/poppins-v20-latin-700.svg#Poppins') format('svg'); /* Legacy iOS */
+         url('../fonts/montserrat-v25-latin-ext_latin-700.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+         url('../fonts/montserrat-v25-latin-ext_latin-700.woff2') format('woff2'), /* Super Modern Browsers */
+         url('../fonts/montserrat-v25-latin-ext_latin-700.woff') format('woff'), /* Modern Browsers */
+         url('../fonts/montserrat-v25-latin-ext_latin-700.ttf') format('truetype'), /* Safari, Android, iOS */
+         url('../fonts/montserrat-v25-latin-ext_latin-700.svg#Montserrat') format('svg'); /* Legacy iOS */
   }
+  
+  /* montserrat-800 - latin-ext_latin */
+  @font-face {
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 800;
+    src: url('../fonts/montserrat-v25-latin-ext_latin-800.eot'); /* IE9 Compat Modes */
+    src: local(''),
+         url('../fonts/montserrat-v25-latin-ext_latin-800.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+         url('../fonts/montserrat-v25-latin-ext_latin-800.woff2') format('woff2'), /* Super Modern Browsers */
+         url('../fonts/montserrat-v25-latin-ext_latin-800.woff') format('woff'), /* Modern Browsers */
+         url('../fonts/montserrat-v25-latin-ext_latin-800.ttf') format('truetype'), /* Safari, Android, iOS */
+         url('../fonts/montserrat-v25-latin-ext_latin-800.svg#Montserrat') format('svg'); /* Legacy iOS */
+  }
+  
+  /* montserrat-200italic - latin-ext_latin */
+  @font-face {
+    font-family: 'Montserrat';
+    font-style: italic;
+    font-weight: 200;
+    src: url('../fonts/montserrat-v25-latin-ext_latin-200italic.eot'); /* IE9 Compat Modes */
+    src: local(''),
+         url('../fonts/montserrat-v25-latin-ext_latin-200italic.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+         url('../fonts/montserrat-v25-latin-ext_latin-200italic.woff2') format('woff2'), /* Super Modern Browsers */
+         url('../fonts/montserrat-v25-latin-ext_latin-200italic.woff') format('woff'), /* Modern Browsers */
+         url('../fonts/montserrat-v25-latin-ext_latin-200italic.ttf') format('truetype'), /* Safari, Android, iOS */
+         url('../fonts/montserrat-v25-latin-ext_latin-200italic.svg#Montserrat') format('svg'); /* Legacy iOS */
+  }
+  
+  /* montserrat-300italic - latin-ext_latin */
+  @font-face {
+    font-family: 'Montserrat';
+    font-style: italic;
+    font-weight: 300;
+    src: url('../fonts/montserrat-v25-latin-ext_latin-300italic.eot'); /* IE9 Compat Modes */
+    src: local(''),
+         url('../fonts/montserrat-v25-latin-ext_latin-300italic.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+         url('../fonts/montserrat-v25-latin-ext_latin-300italic.woff2') format('woff2'), /* Super Modern Browsers */
+         url('../fonts/montserrat-v25-latin-ext_latin-300italic.woff') format('woff'), /* Modern Browsers */
+         url('../fonts/montserrat-v25-latin-ext_latin-300italic.ttf') format('truetype'), /* Safari, Android, iOS */
+         url('../fonts/montserrat-v25-latin-ext_latin-300italic.svg#Montserrat') format('svg'); /* Legacy iOS */
+  }
+  
+  /* montserrat-italic - latin-ext_latin */
+  @font-face {
+    font-family: 'Montserrat';
+    font-style: italic;
+    font-weight: 400;
+    src: url('../fonts/montserrat-v25-latin-ext_latin-italic.eot'); /* IE9 Compat Modes */
+    src: local(''),
+         url('../fonts/montserrat-v25-latin-ext_latin-italic.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+         url('../fonts/montserrat-v25-latin-ext_latin-italic.woff2') format('woff2'), /* Super Modern Browsers */
+         url('../fonts/montserrat-v25-latin-ext_latin-italic.woff') format('woff'), /* Modern Browsers */
+         url('../fonts/montserrat-v25-latin-ext_latin-italic.ttf') format('truetype'), /* Safari, Android, iOS */
+         url('../fonts/montserrat-v25-latin-ext_latin-italic.svg#Montserrat') format('svg'); /* Legacy iOS */
+  }
+  
+  /* montserrat-500italic - latin-ext_latin */
+  @font-face {
+    font-family: 'Montserrat';
+    font-style: italic;
+    font-weight: 500;
+    src: url('../fonts/montserrat-v25-latin-ext_latin-500italic.eot'); /* IE9 Compat Modes */
+    src: local(''),
+         url('../fonts/montserrat-v25-latin-ext_latin-500italic.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+         url('../fonts/montserrat-v25-latin-ext_latin-500italic.woff2') format('woff2'), /* Super Modern Browsers */
+         url('../fonts/montserrat-v25-latin-ext_latin-500italic.woff') format('woff'), /* Modern Browsers */
+         url('../fonts/montserrat-v25-latin-ext_latin-500italic.ttf') format('truetype'), /* Safari, Android, iOS */
+         url('../fonts/montserrat-v25-latin-ext_latin-500italic.svg#Montserrat') format('svg'); /* Legacy iOS */
+  }
+  
+  /* montserrat-600italic - latin-ext_latin */
+  @font-face {
+    font-family: 'Montserrat';
+    font-style: italic;
+    font-weight: 600;
+    src: url('../fonts/montserrat-v25-latin-ext_latin-600italic.eot'); /* IE9 Compat Modes */
+    src: local(''),
+         url('../fonts/montserrat-v25-latin-ext_latin-600italic.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+         url('../fonts/montserrat-v25-latin-ext_latin-600italic.woff2') format('woff2'), /* Super Modern Browsers */
+         url('../fonts/montserrat-v25-latin-ext_latin-600italic.woff') format('woff'), /* Modern Browsers */
+         url('../fonts/montserrat-v25-latin-ext_latin-600italic.ttf') format('truetype'), /* Safari, Android, iOS */
+         url('../fonts/montserrat-v25-latin-ext_latin-600italic.svg#Montserrat') format('svg'); /* Legacy iOS */
+  }
+  
+  /* montserrat-700italic - latin-ext_latin */
+  @font-face {
+    font-family: 'Montserrat';
+    font-style: italic;
+    font-weight: 700;
+    src: url('../fonts/montserrat-v25-latin-ext_latin-700italic.eot'); /* IE9 Compat Modes */
+    src: local(''),
+         url('../fonts/montserrat-v25-latin-ext_latin-700italic.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+         url('../fonts/montserrat-v25-latin-ext_latin-700italic.woff2') format('woff2'), /* Super Modern Browsers */
+         url('../fonts/montserrat-v25-latin-ext_latin-700italic.woff') format('woff'), /* Modern Browsers */
+         url('../fonts/montserrat-v25-latin-ext_latin-700italic.ttf') format('truetype'), /* Safari, Android, iOS */
+         url('../fonts/montserrat-v25-latin-ext_latin-700italic.svg#Montserrat') format('svg'); /* Legacy iOS */
+  }  
 
 * {
     box-sizing: border-box;  
     margin: 0;
     padding: 0;
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Montserrat', sans-serif;
   }
 
   .showcase {
@@ -141,8 +239,8 @@
 
   .text h2 {
     font-size: 4em;
-    font-weight: 700;
-    line-height: 1em;
+    font-weight: 800;
+    line-height: 1.1em;
   }
 
   .text h3 {
@@ -151,60 +249,43 @@
     line-height: 1em;
   }
 
+  .text h4 {
+    font-size: 0.5em;
+    font-weight: 200;
+    line-height: 1em;
+  }
+
   .text p {
     font-size: 1em;
     margin: 20px 0;
-    font-weight: 400;
+    font-weight: 300;
     max-width: 700px;
 
   }
 
   .text a {
     display: inline-block;
-    font-size: 1.1em;
+    font-size: 0.8em;
     background: #fff;
-    padding: 15px 30px;
-    color: #c0c0c0;
+    padding: 12px 25px;
+    color: #000;
     text-decoration: none;
     margin-top: 10px;
-    border-radius: 6px;
+    border-radius: 100px 100px 100px 100px;
     transition: 0.1s;
   }
 
   .text a:hover {
-    color: #fff;
-    background: #a9a9a9;
+    color: #000;
+    background: #d3d3d3;
   }
 
-  .social {
-    position: absolute;
-    bottom: 60px;
-    z-index: 10;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-
-     /* All code and contents copyright 2021-2023 Shadow Foundry, Inc. All rights reserved. */
+    /* All code and contents copyright 2021-2023 Shadow Foundry, Inc. All rights reserved. */
     /* github: shadow-foundry */
-
-  .social li {
-    list-style: none;
-  }
-
-  .social li a {
-    display: inline-block;
-    margin-right: 30px;
-    transition: 0.5s;
-  }
-
-  .social li a:hover {
-    transform: scale(1.2);
-  }
 
   .legal {
     position: absolute;
-    bottom: 3px;
+    bottom: 5px;
     z-index: 10;
     display: flex;
     justify-content: center;
