--- a/style.css
+++ b/style.css
@@ -218,9 +218,10 @@
 
   .learn-more {
     background: #fff;
-    padding: 12px 25px;
+    padding: 12px 22px;
     color: #000;
     text-decoration: none;
+    font-size: 0.8em;
     border-radius: 100px 100px 100px 100px;
     transition: 0.1s;
   }
@@ -235,6 +236,7 @@
     padding: 0;
     color: #fff;
     text-decoration: none;
+    font-size: 0.8em;
     margin-left: 20px;
     border-radius: 0;
  }
